# ddd-rust-template

./: .env  Cargo.toml  README.md
docker/: .postgres.env  docker-compose.yml
docker/sql/: 001.create-grant-access-to-user.sql
src/: main.rs
src/application/: mod.rs
src/application/controllers/: user_controller.rs  user_controller_test.rs
src/application/dtos/: mod.rs  response_message_dto.rs  user_dto.rs
src/infrastructure/migrations/: 001_create_person.sql  002_create_users.sql
src/infrastructure/models/: users.rs
src/infrastructure/repositories/: user_repository.rs
