[package]
name = "ddd-rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Máron <maron.franca@proenem.com.br>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.4.0"
load-dotenv = "0.1.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = [ "postgres", "runtime-async-std" ] } # "runtime-tokio-rustls"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
actix-http = "3.4.0"
actix-service = "2.0.2"
rand = "0.8.5"
